syntax = "proto2";

message Request {
    optional string inputMethod = 1;
    optional string inputMethodName = 2;
    optional string solutionMethod = 3;
    repeated string inputs = 4;
}

message Response {

    enum RunResultType {
        Success = 0;
        CompilerError = 1;
    }

    optional RunResultType methodResultType = 1;
    optional RunResultType solutionResultType = 2;
    optional string methodCompileStatus = 3;
    optional string solutionCompileStatus = 4;
    repeated Output results = 5;

}

enum OutputResultType {
    Success = 0;
    RuntimeError = 1;
    SecurityError = 2;
}

message Output {

    optional string solutionOutput = 1;
    optional OutputResultType solutionOutputType = 2;
    optional string methodOutput = 3;
    optional OutputResultType methodOutputType = 4;
    optional bool match = 5;

}